[project]
name = "pairasync"
version = "1.0.1"
description = "Pair async code to your sync code"
readme = "README.md"
authors = [
    { name = "Aaron2599" }
]
requires-python = ">=3.7"
dependencies = []

[tool.setuptools]
license-files = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
